# quictest_server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
certificate/: install-key.pem  install.pem  server.cert  server.crt  server.key
include/common/: logger.hpp  singleton.hpp
include/core/: serialized_object.hpp  serialized_predefined.hpp  serialized_task.hpp
include/manager/: chat_manager.hpp  connection_manager.hpp
include/network/: quic_api.hpp  quic_buffer_reader.hpp  quic_certificate.hpp  quic_config_manager.hpp  quic_connection.hpp  quic_protocol.hpp  quic_server.hpp
scripts/: install_msquic.sh
src/: main.cpp
src/common/: logger.cpp
src/core/: serialized_object.cpp  serialized_task.cpp
src/manager/: chat_manager.cpp  connection_manager.cpp
src/network/: quic_api.cpp  quic_buffer_reader.cpp  quic_certificate.cpp  quic_config_manager.cpp  quic_connection.cpp  quic_server.cpp
